# k-aoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check.sh  default.nix  dev_shell.sh  flake.nix  get_inputs.sh
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.c
dev/vscode/: launch.json
include/: aoc.h  grid.h  grid.inc  macros.h
src/: CMakeLists.txt  aoc.c  aoc2501.c  aoc2502.c  aoc2503.c  aoc2504.c  aoc2505.c  aoc2506.c  aoc2507.c  aoc2508.c  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  dayX.c
test/: CMakeLists.txt  aoc_test.c
